--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -20,6 +20,7 @@
 			</a>
                 <?php $_category = Mage::getModel('catalog/category')->load($_category->getId()) ?>
                 <?php $_subcategories = $_category->getChildrenCategories() ?>
+				<?php  echo $this->$_subcategories()->getLevel();?>
                 <?php echo '=='. count($_subcategories) ; if (count($_subcategories) > 0): ?>
                 <div class="groupmenu-drop">
 				 
