--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -9,7 +9,7 @@
            <li class="level0 level-top parent">
 		   <span class="cdz-menu-toggle">toggle</span>
 		       <?php   
-			   echo '----level'.$_category->getLevel();
+			  // echo '----level'.$_category->getLevel();
                if($_category->getId()==166)
 			   {		   
 			   $bold="background:#f54444" ;
@@ -25,7 +25,13 @@
 
                 <?php echo '==='. count($_subcategories) ; if (count($_subcategories) > 0): ?>
                 <div class="groupmenu-drop">
-				 
+				  <?php 
+				  if((count($_subcategories)>1) and (count($_subcategories)<3))
+				  {
+                  echo $class="groupmenu-6";}
+			       else{
+					echo $class="groupmenu-1"}
+				}?>
                 <div class="groupmenu-drop-content groupmenu-6" style="padding-bottom: 60px;">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
