--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -28,11 +28,11 @@
 				  <?php 
 				  if((count($_subcategories)>1) and (count($_subcategories)<3))
 				  {
-                  echo $class="groupmenu-6";}
+                   $class="groupmenu-6";}
 			       else{
-					echo $class="groupmenu-1"}
+					 $class="groupmenu-1"}
 				}?>
-                <div class="groupmenu-drop-content groupmenu-6" style="padding-bottom: 60px;">
+                <div class="groupmenu-drop-content<?php echo  ' '.$class; ?>" style="padding-bottom: 60px;">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
 						<div class="col-sm-4">
