--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -30,8 +30,8 @@
 				  {
                    $class="groupmenu-6";}
 			       else{
-					 $class="groupmenu-1"}
-				}?>
+					 $class="groupmenu-1";}
+				?>
                 <div class="groupmenu-drop-content<?php echo  ' '.$class; ?>" style="padding-bottom: 60px;">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
