--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -38,8 +38,9 @@
 
 							
 						
-                    </div><!--row div-->
-				</div>
+                    </div>
+					<?php endforeach; ?>
+				</div><!--row div-->
 				</div> 
 				<?php }else{?>
 					
