--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -56,7 +56,8 @@
 					<?php endforeach; ?>
 				</div><!--row div-->
 				</div> 
-				<?php }else{?>					
+				<?php }else{?>	
+           <?php if (count($_subcategories)>0 ){ ?> 			
 					<div class="groupmenu-drop">				 
                 <div class="groupmenu-drop-content groupmenu-6" style="padding-bottom: 60px;">
 						<div class="row"> <!--row div-->
@@ -92,7 +93,7 @@
 				</div>
 				</div>
 					
-				<?php }?>
+				<?php }}?>
 				
 				
             </li>
