--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26825,7 +26825,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 }
 
 
-
+.cdz-new-trend-wrap .cdz-block-title {margin-top: 20px;}
 
 
 
