--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26834,7 +26834,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
     margin-right: 5px;
 }
 
-.nested-container .page-banners .left img {    margin-bottom: 0;
+.nested-container .page-banners .left img {    margin-bottom: 0!important;
     width: 100%;}
 .nested-container .page-banners .right {
     float: right;
@@ -26843,10 +26843,32 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
     margin-bottom: 10px;
 }
 
-.nested-container .page-banners .right img {width: 100%; margin-bottom: 0;}
+.nested-container .page-banners .right img {width: 100%; margin-bottom: 0!important;}
 .cdz-best-seller-wrap {    margin-top: 20px;}
+.nested-container .page-banners .right:first-child {margin-bottom: 0; margin-top: 0;}
+.page-banners.clearer img {width: 100%; margin-right: 0;}
 
 
+@media only screen and (max-width: 1200px) and (min-width: 1025px) {
+.nested-container .page-banners .left {width: 533px;}
+.nested-container .page-banners .right {width: 458px}
+
+}
+
+@media only screen and (max-width: 767px) {
+.nested-container .page-banners .left {
+    float: left;
+    width: 100%;
+    margin-right: 0px;
+}
+.nested-container .page-banners .right {
+    float: right;
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 10px;
+}
+
+}
 
 
 
