--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26861,6 +26861,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
     float: left;
     width: 100%;
     margin-right: 0px;
+    margin-bottom: 10px;
 }
 .nested-container .page-banners .right {
     float: right;
@@ -26869,7 +26870,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
     margin-bottom: 10px;
 }
 
-}
+} 
 
 
 
