--- a/app/design/frontend/base/default/template/opc/wrapper.phtml
+++ b/app/design/frontend/base/default/template/opc/wrapper.phtml
@@ -1,3 +1,4 @@
+wrapper iwd
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <?php
 $package = Mage::getDesign()->getPackageName();
