--- a/app/design/frontend/base/default/template/opc/wrapper.phtml
+++ b/app/design/frontend/base/default/template/opc/wrapper.phtml
@@ -1,6 +1,7 @@
 wrapper iwd
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <?php
+exit;
 $package = Mage::getDesign()->getPackageName();
 $theme = Mage::getDesign()->getTheme('frontend');
 ?>
