--- a/app/design/frontend/codazon_fastest/default/template/opc/wrapper.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/opc/wrapper.phtml
@@ -1,5 +1,7 @@
+iiiiiiiiiiii
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <?php
+exit;
 $package = Mage::getDesign()->getPackageName();
 $theme = Mage::getDesign()->getTheme('frontend');
 ?>
