--- a/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
@@ -18,7 +18,7 @@
 		<label>Onepage Checkout</label>
 		        
         <reference name="root">
-            <action method="setTemplate"><template>page/1column.phtml</template></action>
+            <action method="setTemplate"><template>page/3columns.phtml</template></action>
         </reference>
         
         <reference name="head">		
@@ -32,9 +32,9 @@
 			<block type="opc/wrapper" name="es.checkout.container" template="opc/wrapper.phtml">
 			
 					<!--  LOGIN FORM  -->
-					<!-- <block type="opc/onepage_login" name="checkout.onepage.login" as="login" template="opc/onepage/login.phtml">
+					<block type="opc/onepage_login" name="checkout.onepage.login" as="login" template="opc/onepage/login.phtml">
 						<block type="customer/account_forgotpassword" name="forgotPassword" template="opc/customer/form/forgotpassword.phtml"/>	
-					</block> -->
+					</block>
 				 	<!-- BILLING FORM -->
                     <block type="checkout/onepage_billing" name="checkout.onepage.billing" as="billing" template="opc/onepage/billing.phtml"/>
 
