--- a/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
@@ -18,7 +18,7 @@
 		<label>Onepage Checkout</label>
 		        
         <reference name="root">
-            <action method="setTemplate"><template>page/3columns.phtml</template></action>
+            <action method="setTemplate"><template>page/1column.phtml</template></action>
         </reference>
         
         <reference name="head">		
@@ -29,7 +29,7 @@
 		</reference>
         
         <reference name="content">
-			<block type="opc/wrapper" name="es.checkout.container" template="opc/wrapper.phtml">
+			<block type="opc/wrapper" name="es.checkout.container.new" template="opc/wrapper.phtml">
 			
 					<!--  LOGIN FORM  -->
 					<block type="opc/onepage_login" name="checkout.onepage.login" as="login" template="opc/onepage/login.phtml">
