--- a/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
@@ -29,9 +29,9 @@
 		</reference>
         
         <reference name="content">
-			<block type="opc/wrapper" name="es.checkout.container" template="opc/wrapper.phtml">
-			
-					
+			<!--  LOGIN FORM  -->
+			<block type="opc/onepage_login" name="checkout.onepage.login" as="login" template="opc/onepage/login.phtml">
+				<block type="customer/account_forgotpassword" name="forgotPassword" template="opc/customer/form/forgotpassword.phtml"/>	
 			</block>
         </reference>
         
