--- a/app/design/frontend/codazon_fastest/default/layout/local.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/local.xml
@@ -1,5 +1,5 @@
 <opc_index_index translate="label">
-		<label>Onepage Checkout</label>
+		<label>Onepage Checkout Using Local</label>
 		        
         <reference name="root">
             <action method="setTemplate"><template>page/1column.phtml</template></action>
