--- a/app/design/frontend/codazon_fastest/default/layout/local.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/local.xml
@@ -2,7 +2,7 @@
 		<label>Onepage Checkout Using Local</label>
 		        
         <reference name="root">
-            <action method="setTemplate"><template>page/1column.phtml</template></action>
+            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
         </reference>
         
         <reference name="head">		
