--- a/app/design/frontend/codazon_fastest/default/layout/local.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/local.xml
@@ -1,4 +1,6 @@
-<opc_index_index translate="label">
+<layout version="0.1.0"><!-- everything goes in here -->
+ <default> <!-- this container tells you what your default layout is. like 'header' and 'footer' -->
+    <opc_index_index translate="label">
 		<label>Onepage Checkout Using Local</label>
 		        
         <reference name="root">
@@ -42,10 +44,7 @@
 	                    <block type="checkout/onepage_payment_methods" name="checkout.payment.methods" as="methods" template="checkout/onepage/payment/methods.phtml">
 	                        <action method="setMethodFormTemplate"><method>purchaseorder</method><template>payment/form/purchaseorder.phtml</template></action>
 	                    </block>
-                	</block>
-                	
-                	
-                    
+                	</block>                  
 			</block>
         </reference>
         
@@ -54,3 +53,5 @@
 			<block type="opc/lipp" name="opc.lipp.js" as="" template="opc/lipp-js.phtml"></block>
 		</reference>
 	</opc_index_index>	
+  </default>
+</layout>
