--- a/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
+++ b/app/design/frontend/codazon_fastest/default/layout/iwd_opc.xml
@@ -15,7 +15,7 @@
 	</default>
 	
 	<opc_index_index translate="label">
-		<label>Onepage Checkout</label>
+		<label>Onepage Checkout Test</label>
 		        
         <reference name="root">
             <action method="setTemplate"><template>page/1column.phtml</template></action>
@@ -23,23 +23,36 @@
         
         <reference name="head">		
         	<action method="addItem"><type>skin_js</type><name>js/iwd/opc/checkout.js</name></action>
-        	<action method="addItem"><type>skin_js</type><name>js/iwd/opc/extend.js</name></action>        
-			<action method="addItem"><type>skin_js</type><name>js/opcheckout.js</name></action>					
+        	<action method="addItem"><type>skin_js</type><name>js/iwd/opc/extend.js</name></action>
+        	<action method="addJs"><file>mage/directpost.js</file></action>
+        	<action method="addJs"><script>mage/centinel.js</script></action>        
+			<action method="addItem"><type>skin_js</type><name>js/opcheckout.js</name></action>
+			<action method="addItem" ifconfig="opc/paypal/status"><type>skin_js</type><name>js/iwd/opc/lipp.js</name></action>
             <action method="addCss"><stylesheet>css/iwd/opc/opc.css</stylesheet></action>
+            <action method="addJs" ifconfig="payment/braintree/active"><file>braintree/braintree-1.3.4.js</file></action>
+            <action method="addCss" ifconfig="payment/braintree/active"><stylesheet>braintree/css/braintree.css</stylesheet></action>
 		</reference>
         
-        <reference name="content">
+        <reference name="content">        	
 			<block type="opc/wrapper" name="es.checkout.container" template="opc/wrapper.phtml">
+			
+					 <block type="page/html_wrapper" name="paypal.button" translate="label">
+		                <label>PayPal Express Checkout Shortcut Wrapper</label>
+		                <block type="paypal/express_shortcut" name="product.info.addtocart.paypal" template="opc/paypal/express/shortcut.phtml">
+		                    <!-- action method="setIsInCatalogProduct"><value>1</value></action -->
+		                </block>
+		            </block>
+			
 			
 					<!--  LOGIN FORM  -->
 					<block type="opc/onepage_login" name="checkout.onepage.login" as="login" template="opc/onepage/login.phtml">
 						<block type="customer/account_forgotpassword" name="forgotPassword" template="opc/customer/form/forgotpassword.phtml"/>	
 					</block>
 				 	<!-- BILLING FORM -->
-                    <block type="checkout/onepage_billing" name="checkout.onepage.billing" as="billing" template="opc/onepage/billing.phtml"/>
+                    <block type="opc/onepage_billing" name="checkout.onepage.billing" as="billing" template="opc/onepage/billing.phtml"/>
 
                     <!-- SHIPPING FORM -->
-                    <block type="checkout/onepage_shipping" name="checkout.onepage.shipping" as="shipping" template="opc/onepage/shipping.phtml"/>
+                    <block type="opc/onepage_shipping" name="checkout.onepage.shipping" as="shipping" template="opc/onepage/shipping.phtml"/>
                     
                     <!-- COUPON FORM -->
                     <block type="checkout/cart_coupon" name="checkout.cart.coupon" as="coupon" template="opc/onepage/coupon.phtml"/>
@@ -60,14 +73,24 @@
 	                    </block>
                 	</block>
                 	
-                	
+                	<block type="checkout/agreements" name="checkout.onepage.agreements" as="agreements" template="opc/onepage/agreements.phtml"/>
+					<block type="opc/onepage_subscribed" template="opc/onepage/review/subscribed.phtml" name="opc.newsletters" /> 
                     
 			</block>
         </reference>
         
         <!--  PAYPAL EXPRESS LIGHTBOX -->
         <reference name="before_body_end">
-			<block type="opc/lipp" name="opc.lipp.js" as="" template="opc/lipp-js.phtml"></block>
+			<block type="opc/lipp" name="opc.lipp.js" as="">
+				<action method="setTemplate" ifconfig="opc/paypal/status"><template>opc/lipp-js.phtml</template></action>
+			</block>
+			<block type="opc/braintree_datajs" name="braintree_payments_data_js">
+				<action method="setTemplate" ifconfig="payment/braintree/active"><template>braintree/data_js.phtml</template></action>
+			</block>
+            <block type="opc/braintree_form" name="payment.form.braintree">
+            	<action method="setTemplate" ifconfig="payment/braintree/active"><template>braintree/review_js.phtml</template></action>
+                <action method="setMethodInfo"></action>
+            </block>
 		</reference>
 	</opc_index_index>		
 	
@@ -75,23 +98,39 @@
 		<reference name="checkout.onepage.review.button">
 			<action method="setTemplate" ifconfig="opc/global/status"><template>opc/onepage/review/button.phtml</template></action>
 		</reference>
-		
 		<reference name="checkout.onepage.agreements">
 			<action method="setTemplate" ifconfig="opc/global/status"><template>opc/onepage/agreements.phtml</template></action>
-		</reference>
-				
-		<reference name="root">
-			<block type="opc/onepage_subscribed" template="opc/onepage/review/subscribed.phtml" name="opc.newsletters"/>			
 		</reference>		
 	</checkout_onepage_review>
 	
-	<!--  PAYPAL EXPRESS LIGHTBOX -->
+	<!--  3D SECURE (CENTINEL) -->
+	<opc_json_savepayment>
+        <reference name="checkout.onepage.review.info.items.before">
+            <block type="centinel/authentication" name="centinel.frame" template="centinel/authentication.phtml">
+                <action method="addRelatedBlock"><blockId>checkout-review-submit</blockId></action>
+                <action method="addRelatedBlock"><blockId>checkout-review-table-wrapper</blockId></action>
+                <action method="setAuthenticationStartMode"><mode>instant</mode></action>
+            </block>
+        </reference>
+    </opc_json_savepayment>
+    
+    <!--  3D SECURE (CENTINEL) - COMPLETE-->
+    <centinel_index_authenticationcomplete>
+    	<reference name="root">
+    		<action method="setTemplate"><template>opc/centinel/authentication/complete.phtml</template></action>
+    	</reference>
+    </centinel_index_authenticationcomplete>
+    
+    
+    <!--  PAYPAL EXPRESS LIGHTBOX -->
 	<checkout_cart_index>
 	 	<reference name="head">					
-			<action method="addItem"><type>skin_js</type><name>js/iwd/opc/lipp.js</name></action>    		
+			<action method="addItem" ifconfig="opc/paypal/status"><type>skin_js</type><name>js/iwd/opc/lipp.js</name></action>    		
 		</reference>
 		<reference name="before_body_end">
-			<block type="opc/lipp" name="opc.lipp.js" as="" template="opc/lipp-js.phtml"></block>
+			<block type="opc/lipp" name="opc.lipp.js" as="">
+				<action method="setTemplate" ifconfig="opc/paypal/status"><template>opc/lipp-js.phtml</template></action>
+			</block>
 		</reference>
 	</checkout_cart_index>
 	
@@ -141,6 +180,5 @@
              <block type="opc/customer_account_asklink" name="opc.paypal.auth" template="opc/customer/account/asklink.phtml"/>
          </reference>
     </opc_paypal_asklink>
-
 
 </layout>
