--- a/app/design/frontend/base/default/layout/iwd_opc.xml
+++ b/app/design/frontend/base/default/layout/iwd_opc.xml
@@ -15,7 +15,7 @@
 	</default>
 	
 	<opc_index_index translate="label">
-		<label>Onepage Checkout</label>
+		<label>Onepage Checkout Test</label>
 		        
         <reference name="root">
             <action method="setTemplate"><template>page/1column.phtml</template></action>
